--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -36,6 +36,7 @@
             display: inline-block;
             margin: 1%;
             background-color: white;
+            border-radius: 10px;
         }
         
         .card:hover {
@@ -60,7 +61,10 @@
             background-color: black;
             color: white;
             padding-top: 5px;
-            padding: 5px
+            padding: 5px;
+            border: 3px solid white;
+            border-radius: 10px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
         
         #navbar {
@@ -152,7 +156,6 @@
         location.reload()
         main()
     }
-
 
     async function total(data){
         let total_amount= 0
